--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,19 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/blinkysquare.js"></script>
+    <script src="src/the-rotater.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkySquare">add a blinky square</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeRotater">add a rotater</a>
+      <a href="#" class="lineUpButton">Line Up!</a>
+      </div>
+      <div class="dancefloor">
+      </div>
     <script src="src/init.js"></script>
   </body>
 </html>
