--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,6 +8,7 @@
     <script src="src/blinkyDancer.js"></script>
     <script src="src/blinkysquare.js"></script>
     <script src="src/the-rotater.js"></script>
+    <script src="src/orbiter.js"></script>
   </head>
   <body>
     <div class="topbar">
@@ -15,6 +16,8 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkySquare">add a blinky square</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeRotater">add a rotater</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="orbiter">add an orbiter</a>
+
       <a href="#" class="lineUpButton">Line Up!</a>
       </div>
       <div class="dancefloor">
